# wherefore

./: CONTRIBUTING.md  DESIGN.md  LICENSE  NOTICE  PERFORMANCE.md  README.md  SECURITY.md  TAXONOMY.md  TAXONOMY_TODO.md  pyproject.toml
.github/workflows/: ci.yml
evals/fixtures/: fixture_float_precision_001_ground_truth.json  fixture_float_precision_001_source.csv  fixture_float_precision_001_target.csv  fixture_null_type_coercion_001_ground_truth.json  fixture_null_type_coercion_001_source.csv  fixture_null_type_coercion_001_target.csv  regenerate.py
evals/harness/: run_eval.py  scoring.py
src/wherefore/: cli.py
src/wherefore/clustering/: cluster_mismatches.py  signatures.py
src/wherefore/comparison/: diff_engine.py  diff_result.py  loaders.py
src/wherefore/synthetic/: base_dataset.py
src/wherefore/synthetic/corruptors/: dedup_failure.py  float_precision.py  null_type_coercion.py  timezone_shift.py
src/wherefore/taxonomy/patterns/: dedup_failure.yaml  float_precision.yaml  null_type_coercion.yaml
tests/test_clustering/: test_cluster_mismatches.py  test_row_presence.py  test_signatures.py
tests/test_comparison/: test_diff_engine.py  test_loaders.py
tests/test_evals/: test_run_eval.py  test_scoring.py
tests/test_synthetic/: test_base_dataset.py
tests/test_synthetic/test_corruptors/: test_dedup_failure.py  test_float_precision.py  test_null_type_coercion.py  test_timezone_shift.py
tests/test_taxonomy/: test_registry.py
