[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wherefore"
version = "0.1.0"
description = "Explains WHY two datasets differ, in plain English, with eval-backed accuracy claims."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "datacompy>=0.11",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "anthropic>=0.30",
    "rapidfuzz>=3.0",   # fuzzy key matching for comparison engine
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
wherefore = "wherefore.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals/harness"]
