[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wherefore"
version = "0.1.0"
description = "Explains WHY two datasets differ, in plain English, with eval-backed accuracy claims."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pandas>=2.2",  # 2.0 floor previously caused a real CI failure: datetime
                     # resolution inference (unit="s" -> [s] vs [ns]) drifted
                     # between pandas versions. The actual fix is an explicit
                     # .astype("datetime64[s]") in base_dataset.py -- this
                     # tighter floor is just an extra layer, not the real fix.
    "numpy>=1.24",
    "datacompy>=1.0",  # diff_engine.py is built against the PandasCompare API (1.0+); pre-1.0 used a different `Compare` class with a different attribute surface
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "anthropic>=0.110",  # providers/claude.py built and verified against 0.111.0's
                          # tool_choice={"type": "tool", "name": ...} shape; the
                          # 0.30 floor previously here was untested against this code.
    "rapidfuzz>=3.0",   # fuzzy key matching for comparison engine
    "pyarrow>=14.0",     # Parquet read/write for loaders.py:load_parquet -- was previously
                         # only a transitive dependency via pandas; declared explicitly
                         # since loaders.py imports pandas' parquet path directly.
    "openpyxl>=3.1",     # Excel (.xlsx) read for loaders.py:load_excel
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
wherefore = "wherefore.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals/harness"]
