[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wherefore"
version = "0.3.1"
description = "Explains WHY two datasets differ, in plain English, with eval-backed accuracy claims."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["data-diff", "data-quality", "data-migration", "csv", "datacompy", "etl-testing"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Database",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas>=2.2,<3.0",  # 2.0 floor previously caused a real CI failure: datetime
                     # resolution inference (unit="s" -> [s] vs [ns]) drifted
                     # between pandas versions. The actual fix is an explicit
                     # .astype("datetime64[s]") in base_dataset.py -- this
                     # tighter floor is just an extra layer, not the real fix.
                     #
                     # NEW CEILING (0.3.1): pandas 3.0.3 segfaults -- not
                     # raises, a real SIGSEGV -- inside pd.to_datetime(...,
                     # errors="coerce", format="ISO8601") when called on a
                     # plain non-date string column (e.g. a "status" column
                     # with values like "active"/"inactive"), which is
                     # exactly what loaders.py:_try_parse_datetime_columns
                     # calls on every object-dtype column to detect real
                     # datetime columns. Confirmed by direct, minimal,
                     # wherefore-free reproduction (3 lines: pd.Series(["a",
                     # "b"]) into that exact call) on Apple Silicon, Python
                     # 3.13, pandas 3.0.3, numpy 2.4.6 -- not a guess, not
                     # specific to this codebase. Confirmed FIXED by the
                     # same minimal reproduction under pandas==2.2.3 (exit
                     # 0, correct [NaT, NaT] result). pandas 3.0's release
                     # notes describe a full rewrite of datetime-resolution
                     # inference in to_datetime() -- the kind of recently-
                     # rewritten native code most likely to carry an
                     # undiscovered bug, consistent with what broke here.
                     # Ceiling kept at <3.0 rather than pinning an exact
                     # version, so a future pandas 3.0.x patch release (or
                     # 3.1+) that actually fixes this can be adopted without
                     # another emergency release -- revisit this ceiling
                     # once a pandas changelog confirms the fix.
    "numpy>=1.24",
    "datacompy>=1.0",  # diff_engine.py is built against the PandasCompare API (1.0+); pre-1.0 used a different `Compare` class with a different attribute surface
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "anthropic>=0.110",  # providers/claude.py built and verified against 0.111.0's
                          # tool_choice={"type": "tool", "name": ...} shape; the
                          # 0.30 floor previously here was untested against this code.
    "rapidfuzz>=3.0",   # fuzzy key matching for comparison engine
    "pyarrow>=14.0",     # Parquet read/write for loaders.py:load_parquet -- was previously
                         # only a transitive dependency via pandas; declared explicitly
                         # since loaders.py imports pandas' parquet path directly.
    "openpyxl>=3.1",     # Excel (.xlsx) read for loaders.py:load_excel
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "moto[s3]>=5.2",     # mocks real AWS S3 calls for testing loaders.py's S3 support, no real AWS account needed
    "py-pglite>=0.5",    # runs a REAL PostgreSQL server (via PGlite, compiled to WASM, through a real npm-fetched
                          # binary) for testing comparison/db.py's Postgres support against an actual server --
                          # not mocked, the same standard the SQLite tests hold (real on-disk sqlite3 files).
                          # Needs Node.js/npm available on PATH (confirmed working; npm fetches its own small
                          # packages from the registry on first use, same trust boundary as any other dev dep).
    "psycopg2-binary>=2.9",  # the actual Postgres driver tests connect through -- listed here too (not just in
                              # the "db" extra) so `pip install -e ".[dev]"` alone is sufficient to run the full
                              # test suite, matching how moto[s3] is listed in dev rather than relying on the
                              # separate "s3" extra being installed too.
]
s3 = [
    "boto3>=1.34",       # optional: only needed for s3:// paths in loaders.py. Install with: pip install wherefore[s3]
]
db = [
    "psycopg2-binary>=2.9",  # optional: only needed for postgresql:// connection strings in comparison/db.py.
                              # REAL TRADEOFF, decided explicitly with the user after testing both options:
                              # psycopg2's own docs say a published package "shouldn't use psycopg2-binary as
                              # a module dependency" (risk: multiple packages bundling conflicting libpq
                              # copies in one environment). Confirmed by direct testing, though, that plain
                              # psycopg2 (source) FAILS to install in a clean environment without libpq-dev/
                              # pg_config and a C compiler already present -- a real, immediate failure for
                              # most users, not a theoretical one. wherefore is a single-purpose CLI, not a
                              # multi-Postgres-dependency web app -- the library-conflict risk the official
                              # warning targets barely applies here, while the install-failure risk is
                              # near-certain on a typical machine. -binary wins on balance for THIS tool.
                              # Install with: pip install wherefore[db]
]
# NOTE: no MySQL driver here yet -- comparison/db.py's MySQL paths all
# raise NotImplementedError; a driver (e.g. PyMySQL) belongs in this
# "db" extra once that backend is actually implemented, not before.

[project.scripts]
wherefore = "wherefore.cli:app"

[project.urls]
Homepage = "https://github.com/tracelore/wherefore"
Repository = "https://github.com/tracelore/wherefore"
Issues = "https://github.com/tracelore/wherefore/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Without this, `pip install` from a real built wheel/sdist silently
# omits every non-.py file under src/wherefore/ -- confirmed by
# actually building a wheel and installing it into a clean venv: the
# CLI crashed immediately with TaxonomyLoadError on the very first
# `compare` run, since taxonomy/patterns/*.yaml wasn't in the wheel at
# all (editable installs (`pip install -e .`) never caught this, since
# they read src/ directly off disk regardless of packaging metadata).
# Also covers reasoning/prompts/*.md, the --explain prompt template,
# which has the identical failure mode on that code path.
wherefore = ["taxonomy/patterns/*.yaml", "reasoning/prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals/harness"]
